src/style.css
@import './css/reset.css';
@import './css/vars.css';
@import './css/cssemile.css';

html {
  box-sizing: border-box;
  overflow: visible;
  font-family: Helvetica, Arial, sans-serif;
}

/* stylelint-disable */
*,
*::before,
*::after {
  box-sizing: inherit;
}
/* stylelint-enable */

body {
  font-family: var(--font);
  background-color: #393e5b;
}

li {
  line-height: 1.8;
}

.container {
  width: 100vw;
  height: 100vh;
  /* background-color: #393e5b;
  background-image: url("assets/images/mobileBackground1.jpg");
  background-size: ;
  background-size: 20rem 60rem;
  background-repeat: no-repeat; */
  position: relative;
  background-image: url("assets/images/mobileBackground1.png");
  background-repeat:no-repeat;
  background-size:100% 100vh;
}
a{
  text-decoration: none;
}

.storetitle {
  overflow: visible;
}

.demo-list {
  margin-top: var(--spacerBig);
  text-transform: capitalize;
}

.storetitle{
  width: auto;
}

.titleImage{
  max-width: 95%;
  height: auto;
  margin-top: 1rem;
}

.storeStyle {
  background-color: whitesmoke;
  border: 2pt solid #393e5b;
  border-radius: 15px;
  height: 15rem;
  width: 15rem;
  align-items: center;

  margin: 0 auto;
  display: inline-block;
}

.lbl {
  width: 100px;
  white-space: nowrap;
  font-size: 1.375rem;
  font-family: henderson-slab-basic,serif;
  font-weight: 600;
  font-style: normal;
  margin-left: 20rem;
  margin-top: 2rem;
}

.labelStyling{
  margin-left: 2rem;
  margin-top: 5rem;
}

.storeParagraph{
  color: #393e5b;
  margin-top: 10rem;
  margin-bottom: 1rem;
  font-weight: 600;
  font-size: 1.875;
}

.store1 {
  height: 4rem;
  background-color: #393e5b;
}

.storeformcontent{
  height: 100%;
  text-align: center;
}

.storeWelcomeMessage{
  font-size: 1.8125rem;
  font-weight: 700;
  color: #EFDFB8;
/*   margin-left: -8rem;
 */  margin-top: 1.5rem;
}

.storeInput{
  background-color: whitesmoke;
  border: 2pt solid #393e5b;
  border-radius: 15px;
  width: 65%;
  height: 2rem;

  margin: auto;
  display: block;
  margin-top: 0.5rem;

}

.storeSubmitButton{
  border-radius: 10px;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 1.1rem;
  color: whitesmoke;
  background-color: #393e5b;

  height: 2rem;
  width: 10rem;

  margin-top: 0.5rem;
}

.storeRadioButton {
  width: 100%;
  margin-left: 1rem;
}

.frm {
  display: inline-block;
}

.menu__container{
  background-color: #393e5b;
  height: 100%;
  text-align: center;
}

.menu__subtitle{
  font-size: 1.5rem;
  font-weight: 700;
  color: #EFDFB8;

  margin-top: 1rem;
}

.menu__paragraph{
  font-size: 1.1rem;
  color: #EFDFB8;
  margin-top: 1rem;
  width: 20rem;
  margin: auto;
  margin-top: 1rem;
}

.list__button{
  width: 17rem;
  height: 9rem;
  background-color: #F5401D;

  border-radius: 25px;
  margin: auto;
  margin-top: 2rem;
}

.list__button p{
  margin-top: 1rem;
  font-size: 1.8rem;
  font-weight: 800;
  color: #393e5b;
  text-decoration: none;

  padding-top: 1rem;
}

.list__button img{
  margin-top: 1rem;
}

.products__button{
  width: 17rem;
  height: 9rem;
  background-color: #FFA957;

  border-radius: 25px;
  margin: auto;
  margin-top: 1.5rem;
}

.products__button p{
  margin-top: 1rem;
  font-size: 1.8rem;
  font-weight: 800;
  color: #393e5b;
  text-decoration: none;

  padding-top: 1rem;
}

.products__button img{
  margin-top: 1rem;
  width: 3rem;
}

.secondary__buttons{ 
  display: grid;
  grid-template-columns: 1fr 1fr; 
  grid-template-rows: 1fr;
  
  margin-top: 2rem;
}

.discounts__button{
  grid-area: 2/1/2/2;
  background-color: #F5401D;
  width: 8rem;
  height: 6rem;
  margin: auto;
  border-radius: 25px;
  
  margin-right: 0.5rem;
}

.discounts__button img {
  margin-top: 1.5rem;
}



.discounts__title{
  width: 8rem;
  color: #EFDFB8;
  font-weight: 800;
  font-size: 1.5rem;
  
  margin-right: 0.5rem;
  margin-left: auto;
  margin-bottom: 1rem;
}

.recipes__title{
  width: 8rem;
  color: #EFDFB8;
  font-weight: 800;
  font-size: 1.5rem;
  
  margin-right: 3rem;
  margin-bottom: 1rem
}

.recipes__button{
  grid-area: "recipes";
  background-color:  #FFA957;
  width: 8rem;
  height: 6rem;
  margin-left: 0.5rem;
  border-radius: 25px;
}

.recipes__button img {
  margin-top: 1.5rem;
}

.settings__button{
  margin-top: 4rem;
}


@media only screen and (min-width: 700px) {
  
  .main__buttons{
    text-align: center;
    display: flex;
  }

  .list__button{
    margin: auto;
    margin-right: 1rem;
  }

  .products__button{
    margin: auto;
    margin-left: 1rem;
  }

}

